# kcalc

./: CMakeLists.txt  kcalc.cpp  kcalc.h  kcalc.ui  kcalc_parser.cpp  kcalc_parser.h  kcalcdisplay2.cpp  kcalcdisplay2.h
tests/: CMakeLists.txt  kcalcparsertest.cpp
